--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "react-devtools": "^3.6.3",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
