--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.2",
     "react-native-screens": "^2.0.0-beta.2",
     "react-navigation": "^4.1.1",
+    "react-navigation-drawer": "^2.3.4",
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
