--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.2",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
