--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
