--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "uuid": "^3.4.0",
     "validator": "^12.2.0"
   },
   "devDependencies": {
