--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "react/static-property-placement": 0,
         "react/jsx-props-no-spreading": 0,
         "object-curly-spacing": 0,
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "camelcase": 0
     }
 }
